[package]
name = "mpow"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
once_cell = "1"
rand = "0.9"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
time = "0.3"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
html-escape = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
rand_core = "0.9"
base64 = "0.21"
hex = "0.4"
tracing-loki = "0.2.6"
url = "2"
jsonwebtoken = "9"
axum = "0.8"
tower = "0.5"
uuid = { version = "1.0", features = ["v4"] }
